syntax = "proto3";

package pchat.todo;

option go_package = "pchat/pb/todo";

import "common/request.proto";
import "common/types.proto";
import "todo/response.proto";

message ListTodoRecordsRequest {
  // 分页
  pchat.common.ListCondition listCondition = 1;
  // 是否已完成
  pchat.common.BoolValue hasBeenDone = 2;
  // 关键字
  string searchKey = 3;
}

message UpsertTodoRequest {
  // id
  string id = 1; // @gotags: valid:"objectId"
  // 内容
  string content = 2;
  // 图片
  repeated string images = 3;
  // 是否需要提醒
  bool needRemind = 4;
  // 提醒设置
  RemindSetting remindSetting = 5;
}
